fix markdown word-wrap bug

--- a/gulp/stylus/parts/markdown.styl
+++ b/gulp/stylus/parts/markdown.styl
@@ -1,6 +1,11 @@
 .post .post-markdown{
     line-height: 30px;
     position: relative;
+    overflow-x: hidden
+    & p{
+        word-wrap: break-word;
+        word-break: break-word;
+    }
     & .pachong{
         display none
         height 0
